tests/negative/misc/no-main.orng
fn not_main() -> Int {0}